// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`response encoding void response emits 204 with empty body 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const ItemsInput = {
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
};

const ItemsOutput = {
  remove: ResponseEncoders.empty(204),
};

const ItemsErrors = {
  remove: ErrorEncoders.json<never>(500),
};

export const ItemsOperations = {
  remove: {
    endpoint: {
      service: { name: "VoidApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeOutput: () => ItemsOutput.remove.encode(undefined),
    encodeError: (error: never) => ItemsErrors.remove.encode(error),
  } satisfies ServerOperation<{ itemId: string }, never, void>,

} as const;
"
`;

exports[`response encoding void response emits 204 with empty body 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly remove: OperationHandler<{ itemId: string }, never, void, Ctx>;
}

export interface VoidApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type {
  Tag
} from "./models.js";

export interface TagsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<Record<string, never>, never, Tag[], Ctx>;
  readonly create: OperationHandler<Tag, never, Tag, Ctx>;
}

export interface ArrayApiServer<Ctx = MatchedRequestContext> {
  readonly Tags: TagsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Tag {
  name: string;
  count: number;
}
"
`;

exports[`response encoding enum and union types in models 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Pet {
  id: string;
  name: string;
  kind: "dog" | "cat" | "bird";
  tag?: string;
}

export interface NotFoundError {
  code: "NOT_FOUND";
  message: string;
}

export type PetKind = "dog" | "cat" | "bird";
"
`;

exports[`response encoding response @header properties become HTTP headers 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { RateLimitedResponse } from "./models.js";

const DataOutput = {
  fetch: ResponseEncoders.jsonWithHeaders<RateLimitedResponse>(200, [["rateLimit", "x-rate-limit"], ["requestId", "x-request-id"]]),
};

const DataErrors = {
  fetch: ErrorEncoders.json<never>(500),
};

export const DataOperations = {
  fetch: {
    endpoint: {
      service: { name: "HeadersApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "fetch",
        operationId: "Data.fetch",
        method: "GET" as const,
        path: "/data",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: RateLimitedResponse) => DataOutput.fetch.encode(output),
    encodeError: (error: never) => DataErrors.fetch.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, RateLimitedResponse>,

} as const;
"
`;

exports[`response encoding response @header properties become HTTP headers 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface RateLimitedResponse {
  data: string;
}
"
`;

exports[`response encoding text and binary content types use correct encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const TextOutput = {
  plain: ResponseEncoders.text(200),
};

const TextErrors = {
  plain: ErrorEncoders.json<never>(500),
};

export const TextOperations = {
  plain: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "plain",
        operationId: "Text.plain",
        method: "GET" as const,
        path: "/text",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: { contentType: "text/plain"; body: string }) => TextOutput.plain.encode(output),
    encodeError: (error: never) => TextErrors.plain.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, { contentType: "text/plain"; body: string }>,

} as const;

const BinaryOutput = {
  download: ResponseEncoders.bytes(200),
};

const BinaryErrors = {
  download: ErrorEncoders.json<never>(500),
};

export const BinaryOperations = {
  download: {
    endpoint: {
      service: { name: "ContentApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "download",
        operationId: "Binary.download",
        method: "GET" as const,
        path: "/binary",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: { contentType: "application/octet-stream"; body: Uint8Array }) => BinaryOutput.download.encode(output),
    encodeError: (error: never) => BinaryErrors.download.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, { contentType: "application/octet-stream"; body: Uint8Array }>,

} as const;
"
`;

exports[`response encoding multiple error types generate discriminated or byProperty encoders 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { Decoder, ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { ConflictError, ForbiddenError, Item, NotFoundError } from "./models.js";

const ItemsInput = {
  read: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateRequest: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
  updateBody: Decoders.object<Item>({
    "id": Decoders.string,
    "name": Decoders.string,
  }),
};

const ItemsOutput = {
  read: ResponseEncoders.json<Item>(200),
  remove: ResponseEncoders.empty(204),
  update: ResponseEncoders.json<Item>(200),
};

const ItemsErrors = {
  read: ErrorEncoders.json<NotFoundError>(404),
  remove: ErrorEncoders.discriminated<NotFoundError | ForbiddenError>("code", { "NOT_FOUND": 404, "FORBIDDEN": 403 }),
  update: ErrorEncoders.byProperty<NotFoundError | ConflictError>({ "code": 404, "conflictId": 409 }),
};

export const ItemsOperations = {
  read: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "read",
        operationId: "Items.read",
        method: "GET" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.read, request, pathParams),
    encodeOutput: (output: Item) => ItemsOutput.read.encode(output),
    encodeError: (error: NotFoundError) => ItemsErrors.read.encode(error),
  } satisfies ServerOperation<{ itemId: string }, NotFoundError, Item>,

  remove: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeOutput: () => ItemsOutput.remove.encode(undefined),
    encodeError: (error: NotFoundError | ForbiddenError) => ItemsErrors.remove.encode(error),
  } satisfies ServerOperation<{ itemId: string }, NotFoundError | ForbiddenError, void>,

  update: {
    endpoint: {
      service: { name: "MultiErrorApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "update",
        operationId: "Items.update",
        method: "PUT" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: async (request, pathParams) =>
      decodeRequestInputAndBody<{ itemId: string }, Item>(ItemsInput.updateRequest, ItemsInput.updateBody, request, pathParams),
    encodeOutput: (output: Item) => ItemsOutput.update.encode(output),
    encodeError: (error: NotFoundError | ConflictError) => ItemsErrors.update.encode(error),
  } satisfies ServerOperation<{ itemId: string; id: string; name: string }, NotFoundError | ConflictError, Item>,

} as const;
"
`;

exports[`response encoding multiple error types generate discriminated or byProperty encoders 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Item {
  id: string;
  name: string;
}

export interface NotFoundError {
  code: "NOT_FOUND";
  message: string;
}

export interface ForbiddenError {
  code: "FORBIDDEN";
  message: string;
}

export interface ConflictError {
  conflictId: string;
  message: string;
}
"
`;
